added generateImage api

--- a/src/Pages/Dashbaord/style.css
+++ b/src/Pages/Dashbaord/style.css
@@ -52,4 +52,13 @@
     height: auto;
     border-radius: 8px;
   }
+
+  .loading-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 60vh; 
+
+  }
   
