--- a/src/Pages/Dashbaord/GenratedImages/style.css
+++ b/src/Pages/Dashbaord/GenratedImages/style.css
@@ -53,11 +53,21 @@
   .download-btn:hover {
     background: rgba(0, 0, 0, 0.9);
   }
-  .no-images-text {
-    font-size: 1.2rem;
-    color: #555;
-    text-align: center;
-    margin-top: 2rem;
-    width: 100%;
-  }
+
+
+.images-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 60vh; 
+  padding: 1rem;
+  width: 100%;
+  
+}
+
+.no-images-text {
+  font-size: 1.2rem;
+  color: #555;
+  text-align: center;
+}
   
