--- a/src/Layout/Dashboard/style.css
+++ b/src/Layout/Dashboard/style.css
@@ -1,10 +1,12 @@
 .dashboard-container {
     display: flex;
-    height: 100vh;
+    height: 100%;
+
   }
   
   .dashboard-content {
     flex: 1;
     padding: 20px;
+
   }
   
