--- a/src/Pages/Dashbaord/Users/style.css
+++ b/src/Pages/Dashbaord/Users/style.css
@@ -5,7 +5,7 @@
 .create-user-btn {
   padding: 10px 16px;
   margin-bottom: 15px;
-  background-color: #3b82f6; /* Blue */
+  background-color: black; /* Blue */
   color: white;
   border: none;
   border-radius: 4px;
@@ -13,7 +13,7 @@
 }
 
 .create-user-btn:hover {
-  background-color: #2563eb; /* Darker blue */
+  background-color:rgb(39, 41, 44); /* Darker blue */
 }
 
 .user-table {
