--- a/src/Pages/Auth/style.css
+++ b/src/Pages/Auth/style.css
@@ -40,7 +40,7 @@
    flex-direction : column;
    gap:1em;
 }
-.auth-input{
+.auth-inputs{
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -53,7 +53,7 @@ label {
   font-size: 0.9rem;
 }
 
-input {
+.auth-input {
   font-size: 1rem;
   border: 1px solid #DEDEDE;
   border-radius: 0.6rem;
@@ -66,7 +66,7 @@ input {
    Button Styles
 ============================= */
 
-button {
+.auth-btn {
   width: 100%;
   font-size: 1rem;
   font-weight: 800;
