--- a/src/Components/MobileSideBar/style.css
+++ b/src/Components/MobileSideBar/style.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-
+   z-index : 998;
 }
 
 /* Mobile Sidebar */
@@ -20,6 +20,7 @@
   box-shadow: 2px 0 5px rgba(0,0,0,0.3);
   display: flex;
   flex-direction: column;
+  z-index : 999;
 }
 
 /* Close button */
