--- a/src/Pages/Dashbaord/style.css
+++ b/src/Pages/Dashbaord/style.css
@@ -76,7 +76,7 @@
   text-align: center;
   border: 2px dashed #e5e7eb;
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   padding: 10px;
   border-radius: 10px;
   box-sizing: border-box;
