--- a/src/utils/OptionSelector/style.css
+++ b/src/utils/OptionSelector/style.css
@@ -1,7 +1,7 @@
 .custom-select {
-
   width: 9rem;
-  font-size: 0.875rem; /* 14px */
+  font-size: 0.875rem;
+  position: relative; /* Ensures dropdown is positioned correctly */
 }
 
 .select-box {
@@ -13,6 +13,7 @@
   border-radius: 0.3125rem;
   cursor: pointer;
   background-color: #fff;
+
 }
 
 .arrow {
@@ -23,14 +24,15 @@
 
 .select-menu {
   position: absolute;
-  top: 100%;
+  top: 10; /* Slightly below */
   left: 0;
   width: 100%;
-  margin-top: 0.25rem;
+  z-index: 1000; /* Make sure it's above */
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 0.3125rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+
 }
 
 .select-option {
