--- a/src/utils/OptionSelector/style.css
+++ b/src/utils/OptionSelector/style.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1em;
+  padding: 0.65rem 1rem;
   border: 1px solid #ccc;
   border-radius: 0.3125rem;
   cursor: pointer;
