--- a/src/Pages/Dashbaord/style.css
+++ b/src/Pages/Dashbaord/style.css
@@ -40,11 +40,12 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
-.btn-generate ,
-.reference-btn,
-.form-options .option-selector {
+.btn-generate,
+.reference-btn {
+
   padding: 0.65rem 1rem;
   font-size: 1rem;
   font-weight: 600;
@@ -58,17 +59,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  display: inline-block;
-
-  text-align: center;
 }
 
 .btn-generate {
+     width: 100px;
      background-color: black;
      color : white;
 }
 .reference-btn{
-  
+  widht: 200px;
   background-color: #FFCC4A;
   color: white;
 }
@@ -159,21 +158,20 @@
   }
  .form-options {
     flex-direction: row;         /* Make buttons appear in a row */
-    flex-wrap: nowrap;           /* Prevent wrapping */
-    justify-content: space-between;
     align-items: center;
-    gap: 0.5rem;
+    gap: 8px;
   }
    .btn-generate,
   .reference-btn {
-    flex: 1 1 0;
     font-size: 0.8rem;
-    padding: 0.4rem 0.5rem;
-    height: 36px;
-
-    width: auto;
-    min-width: 0;
+    padding: 0.65rem .7rem;
   }
+  .reference-btn{
+    width: 120px
+  }
+    .btn-generate{
+      width: 80px;
+    }
 
   .download-btn {
     padding: 0.4rem;
