--- a/src/Pages/Dashbaord/style.css
+++ b/src/Pages/Dashbaord/style.css
@@ -134,6 +134,12 @@
   background-color: #222;
 }
 
+.download-spinner{
+  position: absolute;
+  top: 50%;
+  left:50%;
+}
+
 /* Placeholder */
 .placeholder {
   color: #777;
