--- a/src/Pages/Dashbaord/style.css
+++ b/src/Pages/Dashbaord/style.css
@@ -120,19 +120,16 @@
   position: absolute;
   bottom: 10px;
   right: 10px;
-  background-color: #000;
-  color: #fff;
-  padding: 0.5rem;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background 0.3s;
+  background-color: rgb(255, 204, 74);
+  color: white;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.39);
 }
 
-.download-btn:hover {
-  background-color: #222;
-}
 
 .download-spinner{
   position: absolute;
